# gazeta

./: .gitignore  LICENSE  README.md  bot_run.py  embeddings.py  pyproject.toml  similar_news_bot.py
lib/: embeddings.py  similar_news_bot.py
